--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,8 +14,12 @@ dependencies:
     sdk: flutter
 
   provider: ^6.0.2
+  surf_widget_test_composer: ^0.0.6
+  mocktail: ^1.0.3
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   mjk_lint_rules: ^2.0.0
 
 flutter:
