--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.0.2
   surf_widget_test_composer: ^0.0.6
   mocktail: ^1.0.3
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
